# GPT

./: README.md  main.py  pyproject.toml
nano_gpt/: data_prep.py  run.py
